--- a/tiny_mrp/mrp/templates/mrp/tolid/partialAssetAmarList.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/partialAssetAmarList.html
@@ -81,7 +81,7 @@
 
 
               <td contenteditable="true" data-formula="{{c.formula}}" class='production'>{{c.amar.production_value}}</td>
-              <td contenteditable="true" class="editable-cell2 selectable1 wastage"> </td>
+              <td contenteditable="true" class="editable-cell2 selectable1 wastage">{{c.amar.wastage_value}} </td>
               <td>
                 <button class="btn btn-success copy-row">کپی</button> <!-- Copy button -->
             </td>
