--- a/tiny_mrp/mrp/templates/mrp/moshakhase/partial_moshakhase_create.html
+++ b/tiny_mrp/mrp/templates/mrp/moshakhase/partial_moshakhase_create.html
@@ -4,7 +4,7 @@
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
-    <h4 class="modal-title">ایجاد پروفایل جدید</h4>
+    <h4 class="modal-title">ایجاد مشخصه جدید</h4>
   </div>
   <div class="modal-body">
     {% include 'mrp/moshakhase/partial_moshakhase_form.html' %}
