--- a/tiny_mrp/mrp/templates/mrp/moshakhase/partial_moshakhase_delete.html
+++ b/tiny_mrp/mrp/templates/mrp/moshakhase/partial_moshakhase_delete.html
@@ -4,13 +4,13 @@
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
-    <h4 class="modal-title">تایید حدف پروفایل</h4>
+    <h4 class="modal-title">تایید حدف </h4>
   </div>
   <div class="modal-body">
-    <p class="lead">تایید می کنید؟ <strong>{{ moshakhase.description }}</strong>?
+    <p class="lead">تایید می کنید؟ <strong>{{ moshakhase.description }}</strong>
     
     </p>
-    <p>در صورت تایید حدف اطلاعات مرتبط با این پروفایل مالی نیز حدف می گردند!</p>
+    <p>در صورت تایید حدف اطلاعات مرتبط با این  مشخصه نیز حدف می گردند!</p>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">انصراف</button>
