--- a/tiny_mrp/mrp/templates/mrp/reports/main.html
+++ b/tiny_mrp/mrp/templates/mrp/reports/main.html
@@ -2,164 +2,147 @@
 {% extends 'mrp/blank-page.html' %}
 
 {% load static %}
+{% load widget_tweaks %}
 
- {% block content %}
+{% block content %}
 
 <div class="row">
   <div class="col-lg-12">
-                    <div class="card">
-                        <div class="ibox-title">
-                            <h5>لیست گزارشات </h5>
-                           
-                        </div>
-                        <div class="card-body">
-
-                            <div class="row">
-                                <div class="col-sm-5 m-b-xs">
-                                  <select class="input-sm form-control input-s-sm inline" id="reportCategory">
-                                    <option value="-1">همه</option>
-                                    {% for i in cat%}
-                                    <option value="{{i.0}}">{{i.1}}</option>
-
-                                    {% endfor %}
-                                </select>
-                                </div>
-                                <div class="col-sm-4 m-b-xs">
-                                    <div data-toggle="buttons" class="btn-group">
-                                        <label class="btn btn-sm btn-white " > <input type="radio" id="option1" name="options"> مورد علاقه </label>
-                                        <label class="btn btn-sm btn-white"> <input type="radio" id="option2" name="options"> همه </label>
-
-                                    </div>
-                                </div>
-                                <div class="col-sm-3">
-                                    <div class="input-group"><input type="text" placeholder="جستجو" class="input-sm form-control" id='reportSearch'> <span class="input-group-btn">
-                                        <button type="button" class="btn btn-sm btn-primary" id='woSearchBtn'> برو!</button> </span></div>
-                                </div>
-                            </div>
-                            <div class="table-responsive stripped">
-                              <table class="table  table-striped" data-paging="true" data-page-size="8" id="report-table">
-                                  <thead>
-                                  <tr>
-                                    <th>نام</th>
-                                    <th>شرح</th>
-                                    <th></th>
-
-
-
-
-
-
-                                      <th></th>
-
-
-                                  </tr>
-
-                                  </thead>
-                                  <!-- <tfoot>
-                                    <tr class='footable-paging'>
-                                      <td colspan="5">
-                                              <ul class="pagination pull-right">
-                                              </ul>
-                                          </td>
-
-                                    </tr>
-                                  </tfoot> -->
-                                  <tbody id='tbody_report'>
-                                    {% include 'mrp/reports/partialReportList.html' %}
-
-
-                                  </tbody>
-
-                              </table>
-                              <div class="woPaging" >
-                                {% if reports.has_other_pages %}
-                                <ul class="pagination">
-                                {% if reports.has_previous %}
-                                <li><a href="?page={{ reports.previous_page_number }}">&laquo;</a></li>
-                                {% else %}
-                                <li class="disabled"><span>&laquo;</span></li>
-                                {% endif %}
-                                {% for i in reports.paginator.page_range %}
-                                {% if reports.number == i %}
-                                <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
-                                {% else %}
-                                <li><a href="?page={{ i }}">{{ i }}</a></li>
-                                {% endif %}
-                                {% endfor %}
-                                {% if reports.has_next %}
-                                <li><a href="?page={{ reports.next_page_number }}">&raquo;</a></li>
-                                {% else %}
-                                <li class="disabled"><span>&raquo;</span></li>
-                                {% endif %}
-                                </ul>
-                                {% endif %}
-
-                              </div>
-
-
-
-                                <!-- BUTTON TO TRIGGER THE ACTION -->
-                                {% if request.user.username == "admin" %}
-                                <p>
-                                  <button type="button" class="btn btn-primary js-create-report"
-                                  data-url="{% url 'report_create' %}"                                  >
-                                    <span class="glyphicon glyphicon-plus"
-
-
-
-                                    ></span>
-                                  جدید
-                                  </button>
-                                </p>
-                                {% endif %}
-                            </div>
-                          </div>
-
-                    </div>
-                    <div class="modal fade" id="modal-report" style="overflow-y: scroll">
-                     <div class="modal-dialog  modal-lg ">
-
-                       <div class="modal-content ">
-                       </div>
-                     </div>
-                    </div>
-                    <div class="modal fade" id="modal-simplereport" style="overflow-y: scroll">
-                     <div class="modal-dialog ">
-
-                       <div class="modal-content ">
-                       </div>
-                     </div>
-                    </div>
-                    <div class="modal fade" id="modal-assetcategory" style="overflow-y: scroll">
-                     <div class="modal-dialog ">
-
-                       <div class="modal-content">
-
-
-
-
-
-
-
-
-
-                       </div>
-                     </div>
-                    </div>
-                </div>
-
-
+    <div class="card">
+      <div class="card-header">
+        <h5 class="card-title mb-0">لیست گزارشات</h5>
+      </div>
+      <div class="card-body">
+        <div class="row mb-3">
+          <div class="col-sm-5 mb-2 mb-sm-0">
+            <select class="form-control form-control-sm" id="reportCategory">
+              <option value="-1">همه</option>
+              {% for i in cat %}
+              <option value="{{i.0}}">{{i.1}}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <div class="col-sm-4 mb-2 mb-sm-0">
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio"  value="option1" name="btnradio" id="option1" >
+              <label class="form-check-label" for="option1">مورد علاقه</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" id="option2" value="option2" name="btnradio">
+              <label class="form-check-label" for="option2">همه</label>
+            </div>
+           
+          </div>
+          <div class="col-sm-3">
+            <form class="d-flex mr-3">
+             
+              <div class="input-group">
+                  <input type="text" class="form-control" placeholder="جستجو ایمیل" aria-describedby="woSearchBtn">
+                  <div class="input-group-append">
+                      <button class="btn btn-outline-light" type="button" id="woSearchBtn">
+                          <i class="ti-search"></i>
+                      </button>
+                  </div>
+              </div>
+          </form>
+          
+          </div>
+        </div>
+        
+        <div class="table-responsive">
+          <table class="table table-striped table-hover" id="report-table">
+            <thead>
+              <tr>
+                <th>نام</th>
+                <th>شرح</th>
+                <th></th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody id="tbody_report">
+              {% include 'mrp/reports/partialReportList.html' %}
+            </tbody>
+          </table>
+          
+          <div class="woPaging">
+            {% if reports.has_other_pages %}
+            <nav aria-label="Page navigation">
+              <ul class="pagination justify-content-center">
+                {% if reports.has_previous %}
+                <li class="page-item">
+                  <a class="page-link" href="?page={{ reports.previous_page_number }}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                  </a>
+                </li>
+                {% else %}
+                <li class="page-item disabled">
+                  <span class="page-link">&laquo;</span>
+                </li>
+                {% endif %}
+                
+                {% for i in reports.paginator.page_range %}
+                {% if reports.number == i %}
+                <li class="page-item active" aria-current="page">
+                  <span class="page-link">{{ i }}</span>
+                </li>
+                {% else %}
+                <li class="page-item">
+                  <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                </li>
+                {% endif %}
+                {% endfor %}
+                
+                {% if reports.has_next %}
+                <li class="page-item">
+                  <a class="page-link" href="?page={{ reports.next_page_number }}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                  </a>
+                </li>
+                {% else %}
+                <li class="page-item disabled">
+                  <span class="page-link">&raquo;</span>
+                </li>
+                {% endif %}
+              </ul>
+            </nav>
+            {% endif %}
+          </div>
+          
+          <!-- BUTTON TO TRIGGER THE ACTION -->
+          {% if request.user.username == "admin" %}
+          <div class="mt-3">
+            <button type="button" class="btn btn-primary js-create-report" data-url="{% url 'report_create' %}">
+              <i class="bi bi-plus-circle"></i> جدید
+            </button>
+          </div>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+    
+    <div class="modal fade" id="modal-report">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content"></div>
+      </div>
+    </div>
+    
+    <div class="modal fade" id="modal-simplereport">
+      <div class="modal-dialog">
+        <div class="modal-content"></div>
+      </div>
+    </div>
+    
+    <div class="modal fade" id="modal-assetcategory">
+      <div class="modal-dialog">
+        <div class="modal-content"></div>
+      </div>
+    </div>
+  </div>
 </div>
 
-
-{% load static %}
+{% endblock %}
 
 {% block javascript %}
-
-  <script src="{% static 'project/mainreport.js' %}"></script>
-  <!-- <script src="{% static '/js/project/reports/form.js' %}"></script> -->
-
-
-
-{% endblock %}
+<script src="{% static 'project/mainreport.js' %}"></script>
+<!-- <script src="{% static '/js/project/reports/form.js' %}"></script> -->
 {% endblock %}
