--- a/tiny_mrp/mrp/templates/mrp/reports/partialReportList.html
+++ b/tiny_mrp/mrp/templates/mrp/reports/partialReportList.html
@@ -34,7 +34,7 @@
 </tr>
 {% empty %}
 <tr>
- <td colspan="5" class="text-center bg-warning">هیچ موردی یافت نشد</td>
+ <td colspan="5" class="text-center bg-info">هیچ موردی یافت نشد</td>
 </tr>
 
 {% endfor %}
