--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -186,6 +186,12 @@
         </a>
       </li>
       <li>
+        <a href="{% url 'moshakhase_list' %}">
+          <span>مشخصه ها</span>
+
+        </a>
+      </li>
+      <li>
         <a href="{% url 'list_formula' %}">
           <span>فرمولهای تولید</span>
         </a>
