--- a/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
@@ -283,6 +283,8 @@
                                           <th>100%</th>
                                           <th>تولید</th>
                                           <th>ضایعات</th>
+                                          <th>نظافت</th>
+                                          <th>کیفیت</th>
                                           <th>عملیات</th> 
                                       </tr>
                                   </thead>
@@ -324,6 +326,8 @@
                                           <td contenteditable="true" class="editable-cell3 production_full selectable1" data-maxformula="{{c.speedformula}}" data-vahed="{{c.machine.assetVahed}}">{{c.max}}</td>
                                           <td contenteditable="true" data-formula="{{c.formula}}" class='production'></td>
                                           <td contenteditable="true" class="editable-cell2 selectable1 wastage"> </td>
+                                          <td contenteditable="true" class="editable-cell2 selectable1 nezafat"> </td>
+                                          <td contenteditable="true" class="editable-cell2 selectable1 qc"> </td>
                                           <td>
                                             <button class="btn btn-success copy-row">کپی</button> <!-- Copy button -->
                                         </td>
