--- a/tiny_mrp/mrp/templates/mrp/moshakhase/partial_moshakhase_delete.html
+++ b/tiny_mrp/mrp/templates/mrp/moshakhase/partial_moshakhase_delete.html
@@ -1,7 +1,7 @@
 <form method="post" action="{% url 'moshakhase_delete' moshakhase.id %}" class="js-moshakhase-delete-form">
   {% csrf_token %}
   <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
     <h4 class="modal-title">تایید حدف </h4>
@@ -13,7 +13,7 @@
     <p>در صورت تایید حدف اطلاعات مرتبط با این  مشخصه نیز حدف می گردند!</p>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal">انصراف</button>
+    <button type="button" class="btn btn-default" data-bs-dismiss="modal">انصراف</button>
     <button type="submit" class="btn btn-danger">تایید حدف</button>
   </div>
 </form>
