--- a/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
@@ -256,6 +256,7 @@
                         </ul>
 
                         <div class="tab-content">
+                            
                           {% for cat_item in cat_list %}
       
                           <div class="tab-pane fade {% if forloop.counter == 1 %}active show {% endif %}"
@@ -321,7 +322,7 @@
                                           <td contenteditable="true" class="editable-cell btc vahed selectable1" data-vahed="{{c.machine.assetVahed}}">{{c.vahed}}</td>
                                           <td contenteditable="true" class="editable-cell btc nomre selectable1">{{c.nomre}}</td>
                                           <td contenteditable="true" class="editable-cell2 btc speed selectable1" data-nomre={{c.nomre}}>{{c.speed}}</td>
-                                          <td contenteditable="true" class="editable-cell btc counter1 selectable1"></td>
+                                          <td contenteditable="true" class="editable-cell btc counter1 selectable1">{{c.counter1}}</td>
                                           <td contenteditable="true" class="editable-cell btc counter2 selectable1"></td>
                                           <td contenteditable="true" class="editable-cell3 production_full selectable1" data-maxformula="{{c.speedformula}}" data-vahed="{{c.machine.assetVahed}}">{{c.max}}</td>
                                           <td contenteditable="true" data-formula="{{c.formula}}" class='production'></td>
