--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -145,6 +145,7 @@
       <li><a href="{% url 'register_daily_amar' %}">ورود اطلاعات روزانه</a></li>
 
       <li><a href="{% url 'calendar_main' %}">مشاهده آمار روزانه</a></li>
+      <li><a href="{% url 'calendar_main_scroll' %}">مشاهده آمار روزانه با اسکرول</a></li>
       {% comment %} <li><a href="{% url 'calendar_randeman_brief' %}">راندمان روزانه تولید</a></li> {% endcomment %}
        <li><a href="{% url 'calendar_randeman' %}">راندمان روزانه تولید به تفکیک شیفت</a></li> 
       <li><a href="{% url 'monthly_detaild_report_ezami' %}">سرانه تولید</a></li>
