--- a/tiny_mrp/mrp/templates/mrp/tolid/daily_analyse_tolid.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/daily_analyse_tolid.html
@@ -112,6 +112,7 @@
                             {% endif %}
                         </tr>
                         {% endfor %}
+                        </tbody>
 
                         <tfoot>
                         <tr>
