--- a/tiny_mrp/mrp/templates/mrp/tolid/partial_daily_details_aria_scroll.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/partial_daily_details_aria_scroll.html
@@ -7,7 +7,7 @@
     
     <div class="table-responsive">
       <table class="table table-bordered table-striped company-table" >
-        <thead class="thead-dark">
+        <thead class="thead-dark text-center">
           <tr>
             <th>نام ماشین</th>
             <th>واحد</th>
@@ -36,7 +36,7 @@
               </tr>
               {% for c in category.list %}
               <tr data-machine="{{c.machine.id}}" data-shift="{{i.id}}" data-speed2="{{c.speed}}" 
-                  class="{% if forloop.first %}category-border{% endif %}">
+                  class="{% if forloop.first %}category-border{% endif %} text-center">
                   <td>{{c.machine.assetName}}</td>
                   <td class="editable-cell btc vahed selectable1" data-vahed="{{c.machine.assetVahed}}">{{c.amar.vahed}}</td>
                   <td class="editable-cell btc operators">{{c.amar.get_operators|safe}}</td>
