--- a/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
@@ -327,10 +327,10 @@
                                           <td contenteditable="true" class="editable-cell btc counter2 selectable1"></td>
                                           <td contenteditable="true" class="editable-cell3 production_full selectable1" data-maxformula="{{c.speedformula}}" data-vahed="{{c.machine.assetVahed}}">{{c.max}}</td>
                                           <td contenteditable="true" data-formula="{{c.formula}}" class='production'></td>
-                                          <td contenteditable="true" class="editable-cell2 selectable1 wastage"> </td>
-                                          <td contenteditable="true" class="editable-cell2 selectable1 nezafat"> </td>
-                                          <td contenteditable="true" class="editable-cell2 selectable1 qc"> </td>
-                                          <td>
+                                          <td contenteditable="true" class="editable-cell2 btc  wastage"> </td>
+                                          <td contenteditable="true" class="editable-cell2 btc  nezafat"> </td>
+                                          <td contenteditable="true" class="editable-cell2 btc  qc"> </td>
+                                          <td class="randeman_production">
                                             <!-- <button class="btn btn-success copy-row">کپی</button> Copy button -->
                                         </td>
                                       </tr>
